remove from joint table explicitly